welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if(getCouleurSol():Color) {
                      ^